--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Message/SendMessage.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Message/SendMessage.cshtml
@@ -2,9 +2,25 @@
 
 <h2>Compose Message</h2>
 
+
 @{
     ViewBag.Title = "Compose Message";
 }
+@if(TempData["Error"] != null)
+{
+    <div class="alert alert-danger" role="alert">
+        @TempData["Error"]
+    </div>
+}
+@if(TempData["Success"] != null)
+{
+    <div class="alert alert-success" role="alert">
+        @TempData["Success"]
+    </div>
+}
+<div style="display: flex; justify-content:start; margin-left: -0.5rem">
+    <a class="btn btn-outline-dark my-2 blog-button-white" href="@Context.Request.Headers["Referer"]" role="button" style="color:wheat; width: 80px; margin-bottom: 1rem!important;">Return</a>
+</div>
 
 @using (Html.BeginForm("SendMessage", "Message", FormMethod.Post))
 {
@@ -27,6 +43,7 @@
         @Html.TextAreaFor(m => m.Content, new { @class = "form-control" })
         @Html.ValidationMessageFor(m => m.Content)
     </div>
-
-    <button type="submit" class="btn btn-primary">Send</button>
+    <div style="display: flex; justify-content:start; margin: 2rem 0rem 2rem -0.5rem;">
+        <button type="submit" class="btn btn-outline-dark my-2 blog-button-white" style="color:wheat">Send</button>
+    </div>
 }
