--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Shared/_Layout.cshtml
@@ -111,6 +111,7 @@
             <p><a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="CreateBlog">New Blog Post</a></p>
             <p><a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="ManageBlogs" asp-route-page="1">Manage Blogs</a></p>
             <p><a class="nav-link text-dark" asp-area="" asp-controller="Picture" asp-action="ManageGetAllPictures" asp-route-page="1">Manage Portfolio</a></p>
+            <p><a class="nav-link text-dark" asp-area="" asp-controller="Picture" asp-action="ManageGetAllCollection" asp-route-page="1">Manage Favorites</a></p>
             <p><a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Settings</a></p>
             <p>
                 <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
