--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Favorites.cshtml
@@ -17,6 +17,9 @@
         </div>
     </div>
 </div>
+<div style="display: flex; justify-content:start;">
+    <a class="btn btn-outline-dark my-2 blog-button-white" href="@Context.Request.Headers["Referer"]" role="button" style="color:wheat; width: 80px; margin-bottom: 1rem!important;">Return</a>
+</div>
 <section>
     <div class="container py-3">
         <div class="row">
