--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Home/Search.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Home/Search.cshtml
@@ -18,10 +18,10 @@
     <h4>Pictures</h4>
     <table class="table inbox-table text-white highlight">
         <tr>
-            <th>Owner</th>
-            <th style="text-align:center; padding-right: 60px;">Description</th>
-            <th style="text-align:center; padding-right: 60px;">Image Preview</th>
-            <th style="text-align:end; padding-right: 60px;">Uploaded</th>
+            <th class="thead-lightblue">Owner</th>
+            <th class="thead-lightblue" style="text-align:center; padding-right: 60px;">Description</th>
+            <th class="thead-lightblue" style="text-align:center; padding-right: 60px;">Image Preview</th>
+            <th class="thead-lightblue" style="text-align:end; padding-right: 60px;">Uploaded</th>
         </tr>
         @foreach (var item in Model.Pictures)
         {
@@ -57,10 +57,13 @@
         background-color: rgba(255, 255, 255, 0.2);
         cursor: pointer;
     }
-
-
-
-
+    .inbox-table td, th {
+        color: #bcd0f7;
+        background-color: transparent;
+    }
+    .thead-lightblue{
+        background-color: lightblue!important;
+    }
 </style>
 <script>
     const rows = document.querySelectorAll('tr[picture-id]');
@@ -98,9 +101,9 @@
     <h4>Users</h4>
     <table class="table inbox-table text-white highlight">
         <tr>
-            <th>Username</th>
-            <th style="text-align:center; padding-right: 60px;">Full Name</th>
-            <th style="text-align:end; padding-right: 60px;">Uploads</th>
+            <th class ="thead-lightblue">Username</th>
+            <th class ="thead-lightblue" style="text-align:center; padding-right: 60px;">Full Name</th>
+            <th class="thead-lightblue" style="text-align:end; padding-right: 60px;">Uploads</th>
         </tr>
         @foreach (var item in Model.Users)
         {
@@ -129,10 +132,10 @@
     <h4>Blogs</h4>
     <table class="table inbox-table text-white highlight">
         <tr>
-            <th>Author</th>
-            <th>Title</th>
-            <th>Content</th>
-            <th>Created On</th>
+            <th class="thead-lightblue">Author</th>
+            <th class="thead-lightblue">Title</th>
+            <th class="thead-lightblue">Content</th>
+            <th class="thead-lightblue">Created On</th>
         </tr>
         @foreach (var item in Model.Blogs)
         {
@@ -162,9 +165,9 @@
     <h4>Challenges</h4>
     <table class="table inbox-table text-white highlight">
         <tr>
-            <th>Author</th>
-            <th style="text-align:center; padding-right: 60px;" >Requirements</th>
-            <th style="text-align:end; padding-right: 60px;">Created On</th>
+            <th class="thead-lightblue">Author</th>
+            <th class="thead-lightblue" style="text-align:center; padding-right: 60px;">Requirements</th>
+            <th class="thead-lightblue" style="text-align:end; padding-right: 60px;">Created On</th>
         </tr>
         @foreach (var item in Model.Challenges)
         {
