--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Message/Inbox.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Message/Inbox.cshtml
@@ -9,18 +9,22 @@
 <style>
     .inbox-table td, th {
         color: #bcd0f7;
+        background-color: transparent;
     }
+
 </style>
-<a href="@Url.Action("SendMessage", "Message")" class="btn btn-primary">New message</a>
+<div style="display: flex; justify-content:start; margin: 2rem 0rem 2rem -0.5rem;">
+    <a class="btn btn-outline-dark my-2 blog-button-white" href="@Url.Action("SendMessage", "Message")" role="button" style="color:wheat">New Message</a>
+    </div>
 <table class="table inbox-table">
     <thead>
         <tr>
-            <th>Sender</th>
-            <th>Subject</th>
-            <th>Timestamp</th>
-            <th>Read</th>
-            <th>Unread Count</th>
-            <th></th>
+            <th style="background-color: lightblue;">Sender</th>
+            <th style="background-color: lightblue;">Subject</th>
+            <th style="background-color: lightblue;">Timestamp</th>
+            <th style="background-color: lightblue;">Read</th>
+            <th style="background-color: lightblue;">Unread Count</th>
+            <th style="background-color: lightblue;"></th>
         </tr>
     </thead>
     <tbody>
@@ -30,7 +34,7 @@
                 <td>@message.Sender</td>
                 <td>@message.Subject</td>
                 <td>@message.Timestamp</td>
-                <td>@(message.UnreadMessages  == 0 ? "Yes" : "No")</td>
+                <td>@(message.UnreadMessages == 0 ? "Yes" : "No")</td>
                 <td>@message.UnreadMessages</td>
                 <td><a href="@Url.Action("ViewMessageHistory", "Message", new{id = message.Id})">View History</a></td>
             </tr>
