--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Message/Reply.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Message/Reply.cshtml
@@ -24,5 +24,8 @@
         @Html.ValidationMessageFor(m => m.Content)
     </div>
 
-    <button type="submit" class="btn btn-primary">Send</button>
+    <div style="display: flex; justify-content:start; margin: 2rem 0rem 2rem -0.5rem;">
+        <button type="submit" class="btn btn-outline-dark my-2 blog-button-white" style="color:wheat; height:42px;">Send</button>
+        <a class="btn btn-outline-dark my-2 blog-button-white" href="@Context.Request.Headers["Referer"]" role="button" style="color:wheat; width: 80px; margin-bottom: 1rem!important;">Return</a>
+    </div>
 }
