--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Message/ViewMessage.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Message/ViewMessage.cshtml
@@ -25,4 +25,7 @@
     <label>Timestamp:</label>
     @Model.Timestamp
 </div>
-<a href="@Url.Action("Inbox", "Message")" class="btn btn-secondary">Back to Inbox</a>
+<div style="display: flex; justify-content:start; margin: 2rem 0rem 2rem -0.5rem;">
+    <a class="btn btn-outline-dark my-2 blog-button-white" href="@Url.Action("Inbox", "Message")" class="btn btn-secondary" role="button" style="color:wheat; height: 40px; padding-left:12px; padding-right:12px;">Back to History</a>
+    <a class="btn btn-outline-dark my-2 blog-button-white" href="@Context.Request.Headers["Referer"]" role="button" style="color:wheat; width: 120px; height: 40px; margin-bottom: 1rem!important;">Back to Inbox</a>
+</div>
