--- a/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Portfolio.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/UserProfile/Portfolio.cshtml
@@ -10,12 +10,16 @@
     </div>
 
 }
+
 <div class="d-flex justify-content-center align-items-center">
     <div class="card mb-4" style="background: radial-gradient(circle at 10% 20%, rgba(218, 203, 246,0.3) 10%, rgba(192, 192, 245,0.1) 33.1%, rgba(218, 203, 246,0.5) 90%);border-color:rgb(218, 203, 246); width:50%;">
         <div class="card-body text-center">
             <h5 class="mb-1" style="color:rgb(218, 203, 246);">Portfolio</h5>
         </div>
     </div>
+</div>
+<div style="display: flex; justify-content:start;">
+    <a class="btn btn-outline-dark my-2 blog-button-white" href="@Context.Request.Headers["Referer"]" role="button" style="color:wheat; width: 80px; margin-bottom: 1rem!important;">Return</a>
 </div>
 <section>
     <div class="container py-3">
