--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Challenge/ChallengeDetails.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Challenge/ChallengeDetails.cshtml
@@ -70,9 +70,9 @@
                         @foreach (var picture in Model.Pictures)
                         {
                             <div style="flex-basis: 20%; padding: 5px; max-height: 100%;  margin-top: 1rem;">
-                                <a href="@Url.Action("PictureDetails", "Picture", new { id = Model.Id })">
+                                <a href="@Url.Action("PictureDetails", "Picture", new { id = picture.Key })">
                                     <div style="width: 200px; height: 200px; overflow: hidden;">
-                                        <img src="~/images/@picture" alt="no-picture available"
+                                        <img src="~/images/@picture.Value" alt="no-picture available"
                                              class="block shadow-1-strong rounded mb-4" style="width: 100%; height: 100%; object-fit: cover;">
                                     </div>
                                 </a>
