--- a/Artful-Adventures/ArtfulAdventures.Web/Views/Message/ViewMessageHistory.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Views/Message/ViewMessageHistory.cshtml
@@ -1,6 +1,6 @@
 ﻿@model MessageInboxViewModel
 
-<h2>Message</h2>
+<h2>Message (Last Received Message)</h2>
 
 @{
     ViewBag.Title = "Message History";
