--- a/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/Artful-Adventures/ArtfulAdventures.Web/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -5,6 +5,7 @@
 <ul class="nav nav-pills flex-column">
     <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PictureNavClass(ViewContext)" id="picture" asp-page="./Picture">Update Profile Picture</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.ManageSkillsModelNavClass(ViewContext)" id="manageskillsmodel" asp-page="./ManageSkillsModel">Manage Skills</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
     <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
 </ul>
